fix: Make the header navigation menu display nicely in smaller screens by allowing elements to wrap. Add a little top margin

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -8,6 +8,8 @@ header nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    margin-top: 1rem;
 }
 
 /* body container */
